--- a/01-random-color-generator/setup/index.html
+++ b/01-random-color-generator/setup/index.html
@@ -29,11 +29,12 @@
     <main>
       <div class="container">
         <h2>Background Color: <span class="color">
-          white
+          white Color
         </span></h2>
         <button class="btn btn-hero" id="btn">Click Me</button>
       </div>
     </main>
+
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
