--- a/01-random-color-generator/index.html
+++ b/01-random-color-generator/index.html
@@ -7,7 +7,7 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Random Colors</title>
+    <title>Random Colors</title>1
 
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
@@ -34,7 +34,7 @@
         <button class="btn btn-hero" id="btn">Click Me</button>
       </div>
     </main>
-
+    
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
