--- a/01-random-color-generator/index.html
+++ b/01-random-color-generator/index.html
@@ -7,7 +7,7 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Random Colors</title>1
+    <title>Random Colors</title>
 
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
