--- a/01-random-color-generator/practice/index.html
+++ b/01-random-color-generator/practice/index.html
@@ -17,7 +17,7 @@
                     <a href="index.html">Solids</a>
                 </li>
                 <li>
-                    <a href="hex.html"></a>
+                    <a href="hex.html">Hex</a>
                 </li>
             </ul>
         </div>
@@ -25,7 +25,7 @@
 
     <main>
         <div class="container">
-            <h2>Background Color: <span class="color">White color</span></h2>
+            <h2>Background Color: <span class="color">White</span></h2>
         </div>
         <button id="btn" class="btn btn-hero">
             Click Me
