--- a/01-random-color-generator/index.html
+++ b/01-random-color-generator/index.html
@@ -29,7 +29,7 @@
     <main>
       <div class="container">
         <h2>Background Color: <span class="color">
-          white Color
+          white
         </span></h2>
         <button class="btn btn-hero" id="btn">Click Me</button>
       </div>
