--- a/04-navbar/practice/index.html
+++ b/04-navbar/practice/index.html
@@ -14,50 +14,51 @@
             <div class="nav-header">
                 <img src="logo.svg" alt="">
                 <button class="nav-toggle">
-                    <i class="fas fa-bars"></i>
+                  <i class="fa fa-bars" aria-hidden="true"></i>
                 </button>
             </div>
             <ul class="links">
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="about.html">About</a>
-                </li>
-                <li>
-                    <a href="projects.html">Projects</a>
-                </li>
-                <li>
-                    <a href="contact.html">contact</a>
-                </li>
+              <li>
+                <a href="index.html">home</a>
+              </li>
+              <li>
+                <a href="about.html">about</a>
+              </li>
+              <li>
+                <a href="projects.html">projects</a>
+              </li>
+              <li>
+                <a href="contact.html">contact</a>
+              </li>
             </ul>
+            <!-- social media -->
             <ul class="social-icons">
-                <li>
-                  <a href="https://www.twitter.com">
-                    <i class="fab fa-facebook"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.twitter.com">
-                    <i class="fab fa-twitter"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.twitter.com">
-                    <i class="fab fa-behance"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.twitter.com">
-                    <i class="fab fa-linkedin"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.twitter.com">
-                    <i class="fab fa-sketch"></i>
-                  </a>
-                </li>
-              </ul>
+              <li>
+                <a href="https://www.twitter.com">
+                  <i class="fab fa-facebook"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.twitter.com">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.twitter.com">
+                  <i class="fab fa-behance"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.twitter.com">
+                  <i class="fab fa-linkedin"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.twitter.com">
+                  <i class="fab fa-sketch"></i>
+                </a>
+              </li>
+            </ul>
         </div>
     </nav>
 
