--- a/03-reviews/index.html
+++ b/03-reviews/index.html
@@ -21,7 +21,7 @@
           <h2>Our Reviews</h2>
           <div class="underline"></div>
         </div>
-        <!-- review -->
+        <!-- review --> <!-- going through-->
         <article class="review">
           <div class="img-container">
             <img src="person-1.jpeg" id="person-img" alt="">
