--- a/07-questions/index.html
+++ b/07-questions/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- title -->
+    <!-- title --> <!--reviewed 3,4,5,6-->
     <div class="title">
       <h2>General Questions</h2>
     </div>
